--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
 body {
+}
+
+div {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.box {
     background-color: blue;
+    height: 200px;
+    width: 200px;
+    margin: 1rem;
+    border: black;
+    border-radius: 10%;
+}
+
+#stripe-button {
+    height: 300px;
+    width: 300px;
+    margin: 1rem;
+    border: black 10px;
+    border-radius: 10%;
 }
